--- a/Client/beskederStyle.css
+++ b/Client/beskederStyle.css
@@ -1,15 +1,16 @@
 #form {
-    background: rgba(0, 0, 0, 0.15);
-    padding: 0.25rem;
     position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    height: 3vh;
+    width: 100vw;
     display: flex;
-    height: 3rem;
+    justify-content: space-between;
+    background: rgba(44, 44, 44, 0.55);
+    align-items: center;
     box-sizing: border-box;
-    backdrop-filter: blur(10px);
+
 }
+
+
 #input {
     border: none;
     padding: 0 1rem;
