--- a/Client/beskederStyle.css
+++ b/Client/beskederStyle.css
@@ -2,7 +2,6 @@
     margin: 0;
 }
 #pageContainer{
-    overflow: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -13,7 +12,7 @@
 #topDisplay{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 94vh;
 }
 
 #chatContainer{
@@ -24,16 +23,14 @@
     height: 100%;
 }
 
-ul{
-    padding-inline-start: 0;
-    list-style-type: none;
-    padding-left: 10px;
-}
-
 #messages{
     height: 100%;
     width: 100%;
     font-size: 2vw;
+    overflow-y: scroll;
+    padding-inline-start: 0;
+    list-style-type: none;
+    padding-left: 10px;
 }
 
 #inputArea{
@@ -42,6 +39,10 @@ ul{
     background-color: grey;
     padding: 0.5vh;
     border-top: 0.1vh solid;
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
+    height: 6vh;
 }
 
 #input{
@@ -54,6 +55,9 @@ ul{
 }
 
 #sendButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 0 2vh 2vh 0;
     border-color: black;
     border-width: 0.1vh;
